creusot/tests/should_fail/infinite_size.rs
struct Node2(Tree2);
struct Tree2(Node2);
