creusot/tests/should_fail/infinite_size.stderr
error[E0072]: recursive types `Node2` and `Tree2` have infinite size
 --> infinite_size.rs:1:1
  |
1 | struct Node2(Tree2);
  | ^^^^^^^^^^^^ ----- recursive without indirection
2 | struct Tree2(Node2);
  | ^^^^^^^^^^^^ ----- recursive without indirection
  |
help: insert some indirection (e.g., a `Box`, `Rc`, or `&`) to break the cycle
  |
1 ~ struct Node2(Box<Tree2>);
2 ~ struct Tree2(Box<Node2>);
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0072`.
